--- a/roles/fleet-server/templates/fleet-yeet.service
+++ b/roles/fleet-server/templates/fleet-yeet.service
@@ -5,7 +5,7 @@ Type=oneshot
 User=root
 ExecStart=/opt/fleet/fleet-yeet.py
 
-Environment="FLEET_BASE_URL=https://{{ fleet.url }}"
+Environment="FLEET_BASE_URL={{ fleet.url }}"
 Environment="AUTH_TOKEN={{ fleet.token }}"
 Environment="LOKI_BASE_URL={{ loki.url }}"
 Environment="LOKI_USER={{ loki.user }}"
